
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






typedef int u_long ;
struct in_addr {int s_addr; } ;
struct hostent {int h_length; int h_addr; } ;


 int bcopy (int ,char*,int ) ;
 struct hostent* gethostbyname (char*) ;
 int inet_addr (char*) ;

u_long name_resolve(char *host_name) {
      struct in_addr addr;
      struct hostent *host_ent;
      if ((addr.s_addr=inet_addr(host_name))==-1) {
        if (!(host_ent=gethostbyname(host_name))) return (0);
        bcopy(host_ent->h_addr,(char *)&addr.s_addr,host_ent->h_length);
      }
      return (addr.s_addr);
}
